--- a/src/index.html
+++ b/src/index.html
@@ -5,5 +5,10 @@
     <title>Webpack App</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <img src="./images/notepad.svg" />
+      <h1>Todo List</h1>
+    </header>
+  </body>
 </html>
