Add project section

--- a/src/index.html
+++ b/src/index.html
@@ -10,5 +10,37 @@
       <img src="./images/notepad.svg" />
       <h1>Todo List</h1>
     </header>
+    <section class="projects-section">
+      <h2>Projects</h2>
+      <ul>
+        <li>
+          <div>
+            <h3 class="project-name"><a>Project 1</a></h3>
+            <div class="project-actions">
+              <a><img src="./images/delete.svg" /></a>
+              <a><img src="./images/edit.svg" /></a>
+            </div>
+          </div>
+        </li>
+        <li>
+          <div>
+            <h3 class="project-name"><a>Project 3</a></h3>
+            <div class="project-actions">
+              <a><img src="./images/delete.svg" /></a>
+              <a><img src="./images/edit.svg" /></a>
+            </div>
+          </div>
+        </li>
+        <li>
+          <div>
+            <h3 class="project-name"><a>Project 2</a></h3>
+            <div class="project-actions">
+              <a><img src="./images/delete.svg" /></a>
+              <a><img src="./images/edit.svg" /></a>
+            </div>
+          </div>
+        </li>
+      </ul>
+    </section>
   </body>
 </html>
