--- a/src/index.html
+++ b/src/index.html
@@ -42,5 +42,8 @@
         </li>
       </ul>
     </section>
+    <footer>
+      <p>Icons from iconfinder.com (Icons made by Paomedia)</p>
+    </footer>
   </body>
 </html>
