--- a/src/index.html
+++ b/src/index.html
@@ -10,38 +10,40 @@
       <img src="./images/notepad.svg" />
       <h1>Todo List</h1>
     </header>
-    <section class="projects-section">
-      <h2>Projects</h2>
-      <ul>
-        <li>
-          <div>
-            <h3 class="project-name"><a>Project 1</a></h3>
-            <div class="project-actions">
-              <a><img src="./images/delete.svg" /></a>
-              <a><img src="./images/edit.svg" /></a>
+    <main>
+      <section class="projects-section">
+        <h2>Projects</h2>
+        <ul>
+          <li>
+            <div>
+              <h3 class="project-name"><a>Project 1</a></h3>
+              <div class="project-actions">
+                <a><img src="./images/delete.svg" /></a>
+                <a><img src="./images/edit.svg" /></a>
+              </div>
             </div>
-          </div>
-        </li>
-        <li>
-          <div>
-            <h3 class="project-name"><a>Project 3</a></h3>
-            <div class="project-actions">
-              <a><img src="./images/delete.svg" /></a>
-              <a><img src="./images/edit.svg" /></a>
+          </li>
+          <li>
+            <div>
+              <h3 class="project-name"><a>Project 3</a></h3>
+              <div class="project-actions">
+                <a><img src="./images/delete.svg" /></a>
+                <a><img src="./images/edit.svg" /></a>
+              </div>
             </div>
-          </div>
-        </li>
-        <li>
-          <div>
-            <h3 class="project-name"><a>Project 2</a></h3>
-            <div class="project-actions">
-              <a><img src="./images/delete.svg" /></a>
-              <a><img src="./images/edit.svg" /></a>
+          </li>
+          <li>
+            <div>
+              <h3 class="project-name"><a>Project 2</a></h3>
+              <div class="project-actions">
+                <a><img src="./images/delete.svg" /></a>
+                <a><img src="./images/edit.svg" /></a>
+              </div>
             </div>
-          </div>
-        </li>
-      </ul>
-    </section>
+          </li>
+        </ul>
+      </section>
+    </main>
     <footer>
       <p>Icons from iconfinder.com (Icons made by Paomedia)</p>
     </footer>
