Add todo section

--- a/src/index.html
+++ b/src/index.html
@@ -43,6 +43,7 @@
           </li>
         </ul>
       </section>
+      <section class="todos-section"></section>
     </main>
     <footer>
       <p>Icons from iconfinder.com (Icons made by Paomedia)</p>
