Create add project button

--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
     <main>
       <section class="projects-section">
         <h2>Projects</h2>
+        <button>Add Project</button>
         <ul>
           <li>
             <div>
