Change div to article for project

--- a/src/index.html
+++ b/src/index.html
@@ -16,31 +16,31 @@
         <button>Add Project</button>
         <ul>
           <li>
-            <div>
+            <article>
               <h3 class="project-name"><a>Project 1</a></h3>
               <div class="project-actions">
                 <a><img src="./images/delete.svg" /></a>
                 <a><img src="./images/edit.svg" /></a>
               </div>
-            </div>
+            </article>
           </li>
           <li>
-            <div>
+            <article>
               <h3 class="project-name"><a>Project 2</a></h3>
               <div class="project-actions">
                 <a><img src="./images/delete.svg" /></a>
                 <a><img src="./images/edit.svg" /></a>
               </div>
-            </div>
+            </article>
           </li>
           <li>
-            <div>
+            <article>
               <h3 class="project-name"><a>Project 3</a></h3>
               <div class="project-actions">
                 <a><img src="./images/delete.svg" /></a>
                 <a><img src="./images/edit.svg" /></a>
               </div>
-            </div>
+            </article>
           </li>
         </ul>
       </section>
