Add todo articles

--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,163 @@
           </li>
         </ul>
       </section>
-      <section class="todos-section"></section>
+      <section class="todos-section">
+        <article class="todo-item">
+          <div class="todo-actions">
+            <a><img src="./images/edit.svg" /></a>
+            <a><img src="./images/delete.svg" /></a>
+          </div>
+          <div class="todo-info">
+            <div class="todo-data">
+              <div class="todo-data-type">Title:</div>
+              <div class="todo-data-value">Sample Title</div>
+            </div>
+            <div class="todo-data">
+              <div class="todo-data-type">Time Left:</div>
+              <div class="todo-data-value">100 years (due: 5 Jan 2122)</div>
+            </div>
+            <div class="todo-data">
+              <div class="todo-data-type">Description:</div>
+              <div class="todo-data-value">Sample Description</div>
+            </div>
+            <div class="todo-data">
+              <div class="todo-data-type">Status:</div>
+              <div class="todo-data-value">Pending</div>
+            </div>
+            <button class="mark-as-complete">Mark as complete</button>
+          </div>
+        </article>
+        <article class="todo-item">
+          <div class="todo-actions">
+            <a><img src="./images/edit.svg" /></a>
+            <a><img src="./images/delete.svg" /></a>
+          </div>
+          <div class="todo-info">
+            <div class="todo-data">
+              <div class="todo-data-type">Title:</div>
+              <div class="todo-data-value">Sample Title</div>
+            </div>
+            <div class="todo-data">
+              <div class="todo-data-type">Time Left:</div>
+              <div class="todo-data-value">100 years (due: 5 Jan 2122)</div>
+            </div>
+            <div class="todo-data">
+              <div class="todo-data-type">Description:</div>
+              <div class="todo-data-value">Sample Description</div>
+            </div>
+            <div class="todo-data">
+              <div class="todo-data-type">Status:</div>
+              <div class="todo-data-value">Pending</div>
+            </div>
+            <button class="mark-as-complete">Mark as complete</button>
+          </div>
+        </article>
+        <article class="todo-item">
+          <div class="todo-actions">
+            <a><img src="./images/edit.svg" /></a>
+            <a><img src="./images/delete.svg" /></a>
+          </div>
+          <div class="todo-info">
+            <div class="todo-data">
+              <div class="todo-data-type">Title:</div>
+              <div class="todo-data-value">Sample Title</div>
+            </div>
+            <div class="todo-data">
+              <div class="todo-data-type">Time Left:</div>
+              <div class="todo-data-value">100 years (due: 5 Jan 2122)</div>
+            </div>
+            <div class="todo-data">
+              <div class="todo-data-type">Description:</div>
+              <div class="todo-data-value">Sample Description</div>
+            </div>
+            <div class="todo-data">
+              <div class="todo-data-type">Status:</div>
+              <div class="todo-data-value">Pending</div>
+            </div>
+            <button class="mark-as-complete">Mark as complete</button>
+          </div>
+        </article>
+        <article class="todo-item">
+          <div class="todo-actions">
+            <a><img src="./images/edit.svg" /></a>
+            <a><img src="./images/delete.svg" /></a>
+          </div>
+          <div class="todo-info">
+            <div class="todo-data">
+              <div class="todo-data-type">Title:</div>
+              <div class="todo-data-value">Sample Title</div>
+            </div>
+            <div class="todo-data">
+              <div class="todo-data-type">Time Left:</div>
+              <div class="todo-data-value">100 years (due: 5 Jan 2122)</div>
+            </div>
+            <div class="todo-data">
+              <div class="todo-data-type">Description:</div>
+              <div class="todo-data-value">Sample Description</div>
+            </div>
+            <div class="todo-data">
+              <div class="todo-data-type">Status:</div>
+              <div class="todo-data-value">Pending</div>
+            </div>
+            <button class="mark-as-complete">Mark as complete</button>
+          </div>
+        </article>
+        <article class="todo-item">
+          <div class="todo-actions">
+            <a><img src="./images/edit.svg" /></a>
+            <a><img src="./images/delete.svg" /></a>
+          </div>
+          <div class="todo-info">
+            <div class="todo-data">
+              <div class="todo-data-type">Title:</div>
+              <div class="todo-data-value">Sample Title</div>
+            </div>
+            <div class="todo-data">
+              <div class="todo-data-type">Time Left:</div>
+              <div class="todo-data-value">100 years (due: 5 Jan 2122)</div>
+            </div>
+            <div class="todo-data">
+              <div class="todo-data-type">Description:</div>
+              <div class="todo-data-value">Sample Description</div>
+            </div>
+            <div class="todo-data">
+              <div class="todo-data-type">Status:</div>
+              <div class="todo-data-value">Pending</div>
+            </div>
+            <button class="mark-as-complete">Mark as complete</button>
+          </div>
+        </article>
+        <article class="todo-item">
+          <div class="todo-actions">
+            <a><img src="./images/edit.svg" /></a>
+            <a><img src="./images/delete.svg" /></a>
+          </div>
+          <div class="todo-info">
+            <div class="todo-data">
+              <div class="todo-data-type">Title:</div>
+              <div class="todo-data-value">
+                dsfaasdjfhsda jhdsfhjkfdhdfsjhdskfhdf
+                skjdshfkjdfshjkfsdhdfskfdshjdfskfdshdkjfdshfdsk
+              </div>
+            </div>
+            <div class="todo-data">
+              <div class="todo-data-type">Time Left:</div>
+              <div class="todo-data-value">100 years (due: 5 Jan 2122)</div>
+            </div>
+            <div class="todo-data">
+              <div class="todo-data-type">Description:</div>
+              <div class="todo-data-value">
+                ashjfdjsahdsjfhfajkshfjkshajkafhajkfahjkhfjksahfjkhjksdfakhhafafdsafdsfdsfds
+              </div>
+            </div>
+            <div class="todo-data">
+              <div class="todo-data-type">Status:</div>
+              <div class="todo-data-value">Pending</div>
+            </div>
+            <button class="mark-as-complete">Mark as complete</button>
+          </div>
+        </article>
+      </section>
     </main>
     <footer>
       <p>Icons from iconfinder.com (Icons made by Paomedia)</p>
