Improve Todo Items

--- a/src/index.html
+++ b/src/index.html
@@ -67,7 +67,9 @@
               <div class="todo-data-type">Status:</div>
               <div class="todo-data-value">Pending</div>
             </div>
-            <button class="mark-as-complete">Mark as complete</button>
+            <div>
+              <button class="mark-as-complete">Mark as complete</button>
+            </div>
           </div>
         </article>
         <article class="todo-item">
@@ -92,7 +94,9 @@
               <div class="todo-data-type">Status:</div>
               <div class="todo-data-value">Pending</div>
             </div>
-            <button class="mark-as-complete">Mark as complete</button>
+            <div>
+              <button class="mark-as-complete">Mark as complete</button>
+            </div>
           </div>
         </article>
         <article class="todo-item">
@@ -117,7 +121,9 @@
               <div class="todo-data-type">Status:</div>
               <div class="todo-data-value">Pending</div>
             </div>
-            <button class="mark-as-complete">Mark as complete</button>
+            <div>
+              <button class="mark-as-complete">Mark as complete</button>
+            </div>
           </div>
         </article>
         <article class="todo-item">
@@ -142,7 +148,9 @@
               <div class="todo-data-type">Status:</div>
               <div class="todo-data-value">Pending</div>
             </div>
-            <button class="mark-as-complete">Mark as complete</button>
+            <div>
+              <button class="mark-as-complete">Mark as complete</button>
+            </div>
           </div>
         </article>
         <article class="todo-item">
@@ -167,7 +175,9 @@
               <div class="todo-data-type">Status:</div>
               <div class="todo-data-value">Pending</div>
             </div>
-            <button class="mark-as-complete">Mark as complete</button>
+            <div>
+              <button class="mark-as-complete">Mark as complete</button>
+            </div>
           </div>
         </article>
         <article class="todo-item">
@@ -197,7 +207,9 @@
               <div class="todo-data-type">Status:</div>
               <div class="todo-data-value">Pending</div>
             </div>
-            <button class="mark-as-complete">Mark as complete</button>
+            <div>
+              <button class="mark-as-complete">Mark as complete</button>
+            </div>
           </div>
         </article>
       </section>
