--- a/src/index.html
+++ b/src/index.html
@@ -213,6 +213,7 @@
           </div>
         </article>
       </section>
+      <div class="float-button"><img src="./images/add.svg" /></div>
     </main>
     <footer>
       <p>Icons from iconfinder.com (Icons made by Paomedia)</p>
