--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
       <img src="./images/notepad.svg" />
       <h1>Todo List</h1>
     </header>
+    <section class="overlay active"></section>
     <main>
       <section class="projects-section">
         <h2>Projects</h2>
