Add priority colors

--- a/src/index.html
+++ b/src/index.html
@@ -35,41 +35,20 @@
             <div>
               <h3>Priority:</h3>
               <div class="priority-options">
-                <div>
-                  <input
-                    type="radio"
-                    id="priority-highest"
-                    name="priority"
-                    value="1"
-                    checked
-                  />
+                <div class="priority-highest">
+                  <input type="radio" name="priority" value="1" checked />
                   <label for="priority-highest">urgent and important</label>
                 </div>
-                <div>
-                  <input
-                    type="radio"
-                    id="priority-high"
-                    name="priority"
-                    value="2"
-                  />
+                <div class="priority-high">
+                  <input type="radio" name="priority" value="2" />
                   <label for="priority-high">urgent but not important</label>
                 </div>
-                <div>
-                  <input
-                    type="radio"
-                    id="priority-low"
-                    name="priority"
-                    value="3"
-                  />
+                <div class="priority-low">
+                  <input type="radio" name="priority" value="3" />
                   <label for="priority-low">not urgent but important</label>
                 </div>
-                <div>
-                  <input
-                    type="radio"
-                    id="priority-lowest"
-                    name="priority"
-                    value="4"
-                  />
+                <div class="priority-lowest">
+                  <input type="radio" name="priority" value="4" />
                   <label for="priority-lowest"
                     >not urgent and not important</label
                   >
