--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     </header>
     <section class="overlay active">
       <div class="todo-form-container active">
-        <div class="todo-form-flex-container">
+        <div class="form-flex-container">
           <div class="form-card">
             <form>
               <div>
