Remove .inactive class

--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,8 @@
       <img src="./images/notepad.svg" />
       <h1>Todo List</h1>
     </header>
-    <section class="overlay inactive">
-      <div class="todo-form-container inactive">
+    <section class="overlay">
+      <div class="todo-form-container">
         <div class="form-flex-container">
           <div class="form-card">
             <form>
@@ -63,7 +63,7 @@
           </div>
         </div>
       </div>
-      <div class="project-form-container inactive">
+      <div class="project-form-container">
         <div class="form-flex-container">
           <div class="form-card">
             <form>
