Add html templates for repeat items

--- a/src/index.html
+++ b/src/index.html
@@ -92,27 +92,9 @@
         <h2>Projects</h2>
         <button>Add Project</button>
         <ul>
-          <li>
+          <li class="project-item template">
             <article>
               <h3 class="project-name"><a>Project 1</a></h3>
-              <div class="project-actions">
-                <a><img src="./images/delete.svg" /></a>
-                <a><img src="./images/edit.svg" /></a>
-              </div>
-            </article>
-          </li>
-          <li>
-            <article>
-              <h3 class="project-name"><a>Project 2</a></h3>
-              <div class="project-actions">
-                <a><img src="./images/delete.svg" /></a>
-                <a><img src="./images/edit.svg" /></a>
-              </div>
-            </article>
-          </li>
-          <li>
-            <article>
-              <h3 class="project-name"><a>Project 3</a></h3>
               <div class="project-actions">
                 <a><img src="./images/delete.svg" /></a>
                 <a><img src="./images/edit.svg" /></a>
@@ -122,7 +104,7 @@
         </ul>
       </section>
       <section class="todos-section">
-        <article class="todo-item">
+        <article class="todo-item template">
           <div class="todo-actions">
             <a><img src="./images/edit.svg" /></a>
             <a><img src="./images/delete.svg" /></a>
@@ -139,146 +121,6 @@
             <div class="todo-data">
               <div class="todo-data-type">Description:</div>
               <div class="todo-data-value">Sample Description</div>
-            </div>
-            <div class="todo-data">
-              <div class="todo-data-type">Status:</div>
-              <div class="todo-data-value">Pending</div>
-            </div>
-            <div>
-              <button class="mark-as-complete">Mark as complete</button>
-            </div>
-          </div>
-        </article>
-        <article class="todo-item">
-          <div class="todo-actions">
-            <a><img src="./images/edit.svg" /></a>
-            <a><img src="./images/delete.svg" /></a>
-          </div>
-          <div class="todo-info">
-            <div class="todo-data">
-              <div class="todo-data-type">Title:</div>
-              <div class="todo-data-value">Sample Title</div>
-            </div>
-            <div class="todo-data">
-              <div class="todo-data-type">Time Left:</div>
-              <div class="todo-data-value">100 years (due: 5 Jan 2122)</div>
-            </div>
-            <div class="todo-data">
-              <div class="todo-data-type">Description:</div>
-              <div class="todo-data-value">Sample Description</div>
-            </div>
-            <div class="todo-data">
-              <div class="todo-data-type">Status:</div>
-              <div class="todo-data-value">Pending</div>
-            </div>
-            <div>
-              <button class="mark-as-complete">Mark as complete</button>
-            </div>
-          </div>
-        </article>
-        <article class="todo-item">
-          <div class="todo-actions">
-            <a><img src="./images/edit.svg" /></a>
-            <a><img src="./images/delete.svg" /></a>
-          </div>
-          <div class="todo-info">
-            <div class="todo-data">
-              <div class="todo-data-type">Title:</div>
-              <div class="todo-data-value">Sample Title</div>
-            </div>
-            <div class="todo-data">
-              <div class="todo-data-type">Time Left:</div>
-              <div class="todo-data-value">100 years (due: 5 Jan 2122)</div>
-            </div>
-            <div class="todo-data">
-              <div class="todo-data-type">Description:</div>
-              <div class="todo-data-value">Sample Description</div>
-            </div>
-            <div class="todo-data">
-              <div class="todo-data-type">Status:</div>
-              <div class="todo-data-value">Pending</div>
-            </div>
-            <div>
-              <button class="mark-as-complete">Mark as complete</button>
-            </div>
-          </div>
-        </article>
-        <article class="todo-item">
-          <div class="todo-actions">
-            <a><img src="./images/edit.svg" /></a>
-            <a><img src="./images/delete.svg" /></a>
-          </div>
-          <div class="todo-info">
-            <div class="todo-data">
-              <div class="todo-data-type">Title:</div>
-              <div class="todo-data-value">Sample Title</div>
-            </div>
-            <div class="todo-data">
-              <div class="todo-data-type">Time Left:</div>
-              <div class="todo-data-value">100 years (due: 5 Jan 2122)</div>
-            </div>
-            <div class="todo-data">
-              <div class="todo-data-type">Description:</div>
-              <div class="todo-data-value">Sample Description</div>
-            </div>
-            <div class="todo-data">
-              <div class="todo-data-type">Status:</div>
-              <div class="todo-data-value">Pending</div>
-            </div>
-            <div>
-              <button class="mark-as-complete">Mark as complete</button>
-            </div>
-          </div>
-        </article>
-        <article class="todo-item">
-          <div class="todo-actions">
-            <a><img src="./images/edit.svg" /></a>
-            <a><img src="./images/delete.svg" /></a>
-          </div>
-          <div class="todo-info">
-            <div class="todo-data">
-              <div class="todo-data-type">Title:</div>
-              <div class="todo-data-value">Sample Title</div>
-            </div>
-            <div class="todo-data">
-              <div class="todo-data-type">Time Left:</div>
-              <div class="todo-data-value">100 years (due: 5 Jan 2122)</div>
-            </div>
-            <div class="todo-data">
-              <div class="todo-data-type">Description:</div>
-              <div class="todo-data-value">Sample Description</div>
-            </div>
-            <div class="todo-data">
-              <div class="todo-data-type">Status:</div>
-              <div class="todo-data-value">Pending</div>
-            </div>
-            <div>
-              <button class="mark-as-complete">Mark as complete</button>
-            </div>
-          </div>
-        </article>
-        <article class="todo-item">
-          <div class="todo-actions">
-            <a><img src="./images/edit.svg" /></a>
-            <a><img src="./images/delete.svg" /></a>
-          </div>
-          <div class="todo-info">
-            <div class="todo-data">
-              <div class="todo-data-type">Title:</div>
-              <div class="todo-data-value">
-                dsfaasdjfhsda jhdsfhjkfdhdfsjhdskfhdf
-                skjdshfkjdfshjkfsdhdfskfdshjdfskfdshdkjfdshfdsk
-              </div>
-            </div>
-            <div class="todo-data">
-              <div class="todo-data-type">Time Left:</div>
-              <div class="todo-data-value">100 years (due: 5 Jan 2122)</div>
-            </div>
-            <div class="todo-data">
-              <div class="todo-data-type">Description:</div>
-              <div class="todo-data-value">
-                ashjfdjsahdsjfhfajkshfjkshajkafhajkfahjkhfjksahfjkhjksdfakhhafafdsafdsfdsfds
-              </div>
             </div>
             <div class="todo-data">
               <div class="todo-data-type">Status:</div>
