Remove a tag from img

--- a/src/index.html
+++ b/src/index.html
@@ -96,8 +96,8 @@
             <article>
               <h3 class="project-name"><a>Project 1</a></h3>
               <div class="project-actions">
-                <a><img src="./images/delete.svg" /></a>
-                <a><img src="./images/edit.svg" /></a>
+                <img src="./images/delete.svg" />
+                <img src="./images/edit.svg" />
               </div>
             </article>
           </li>
