Add optional prefill values to form

--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
               <h3>Priority:</h3>
               <div class="priority-options">
                 <div class="priority-highest">
-                  <input type="radio" name="priority" value="1" checked />
+                  <input type="radio" name="priority" value="1" />
                   <label for="priority-highest">urgent and important</label>
                 </div>
                 <div class="priority-high">
