convert projection-section to nav from section

--- a/src/index.html
+++ b/src/index.html
@@ -80,7 +80,7 @@
       </div>
     </section>
     <main>
-      <section class="projects-section">
+      <nav class="projects-section">
         <h2>Projects</h2>
         <button>Add Project</button>
         <ul>
@@ -94,7 +94,7 @@
             </article>
           </li>
         </ul>
-      </section>
+      </nav>
       <section class="todos-section">
         <article class="todo-item template">
           <div class="todo-actions">
