Setup project nodes of nav

--- a/src/index.html
+++ b/src/index.html
@@ -88,8 +88,8 @@
             <article>
               <h3 class="project-name"><a>Project 1</a></h3>
               <div class="project-actions">
-                <img src="./images/delete.svg" />
-                <img src="./images/edit.svg" />
+                <img class="delete-button" src="./images/delete.svg" />
+                <img class="edit-button" src="./images/edit.svg" />
               </div>
             </article>
           </li>
@@ -98,8 +98,8 @@
       <section class="todos-section">
         <article class="todo-item template">
           <div class="todo-actions">
-            <a><img src="./images/edit.svg" /></a>
-            <a><img src="./images/delete.svg" /></a>
+            <img class="delete-button" src="./images/edit.svg" />
+            <img class="edit-button" src="./images/delete.svg" />
           </div>
           <div class="todo-info">
             <div class="todo-data">
