Generalise priority-* class names

--- a/src/index.html
+++ b/src/index.html
@@ -35,23 +35,21 @@
             <div>
               <h3>Priority:</h3>
               <div class="priority-options">
-                <div class="priority-highest">
+                <div class="priority-1">
                   <input type="radio" name="priority" value="1" />
-                  <label for="priority-highest">urgent and important</label>
+                  <label for="priority-1">urgent and important</label>
                 </div>
-                <div class="priority-high">
+                <div class="priority-2">
                   <input type="radio" name="priority" value="2" />
-                  <label for="priority-high">urgent but not important</label>
+                  <label for="priority-2">urgent but not important</label>
                 </div>
-                <div class="priority-low">
+                <div class="priority-3">
                   <input type="radio" name="priority" value="3" />
-                  <label for="priority-low">not urgent but important</label>
+                  <label for="priority-3">not urgent but important</label>
                 </div>
-                <div class="priority-lowest">
+                <div class="priority-4">
                   <input type="radio" name="priority" value="4" />
-                  <label for="priority-lowest"
-                    >not urgent and not important</label
-                  >
+                  <label for="priority-4">not urgent and not important</label>
                 </div>
               </div>
             </div>
