Add data-type to todo-data

--- a/src/index.html
+++ b/src/index.html
@@ -100,24 +100,26 @@
             <img class="edit-button" src="./images/delete.svg" />
           </div>
           <div class="todo-info">
-            <div class="todo-data">
+            <div class="todo-data" data-type="title">
               <div class="todo-data-type">Title:</div>
               <div class="todo-data-value">Sample Title</div>
             </div>
-            <div class="todo-data">
+            <div class="todo-data" data-type="time-left">
               <div class="todo-data-type">Time Left:</div>
               <div class="todo-data-value">100 years (due: 5 Jan 2122)</div>
             </div>
-            <div class="todo-data">
+            <div class="todo-data" data-type="description">
               <div class="todo-data-type">Description:</div>
               <div class="todo-data-value">Sample Description</div>
             </div>
-            <div class="todo-data">
+            <div class="todo-data" data-type="status">
               <div class="todo-data-type">Status:</div>
               <div class="todo-data-value">Pending</div>
             </div>
             <div>
-              <button class="mark-as-complete">Mark as complete</button>
+              <button class="mark-as-complete" data-type="is-completed">
+                Mark as complete
+              </button>
             </div>
           </div>
         </article>
