--- a/src/index.html
+++ b/src/index.html
@@ -112,14 +112,12 @@
               <div class="todo-data-type">Description:</div>
               <div class="todo-data-value">Sample Description</div>
             </div>
-            <div class="todo-data" data-type="status">
+            <div class="todo-data" data-type="is-completed">
               <div class="todo-data-type">Status:</div>
               <div class="todo-data-value">Pending</div>
             </div>
             <div>
-              <button class="mark-as-complete" data-type="is-completed">
-                Mark as complete
-              </button>
+              <button class="mark-as-complete">Mark as complete</button>
             </div>
           </div>
         </article>
