--- a/src/index.html
+++ b/src/index.html
@@ -112,7 +112,7 @@
               <div class="todo-data-type">Description:</div>
               <div class="todo-data-value">Sample Description</div>
             </div>
-            <div class="todo-data" data-type="is-completed">
+            <div class="todo-data" data-type="status">
               <div class="todo-data-type">Status:</div>
               <div class="todo-data-value">Pending</div>
             </div>
