Use project UUID instead of name for id

--- a/src/index.html
+++ b/src/index.html
@@ -82,7 +82,12 @@
         <h2>Projects</h2>
         <button>Add Project</button>
         <ul>
-          <li class="project-item template">
+          <li class="project-item" data-UUID="all">
+            <article>
+              <h3 class="project-name"><a>all</a></h3>
+            </article>
+          </li>
+          <li class="project-item template" data-UUID="data-UUID">
             <article>
               <h3 class="project-name"><a>Project 1</a></h3>
               <div class="project-actions">
