add name to "all" project

--- a/src/index.html
+++ b/src/index.html
@@ -82,12 +82,12 @@
         <h2>Projects</h2>
         <button>Add Project</button>
         <ul>
-          <li class="project-item" data-UUID="all">
+          <li class="project-item" data-UUID="all" data-name="all">
             <article>
               <h3 class="project-name"><a>all</a></h3>
             </article>
           </li>
-          <li class="project-item template" data-UUID="data-UUID">
+          <li class="project-item template">
             <article>
               <h3 class="project-name"><a>Project 1</a></h3>
               <div class="project-actions">
