Add DOM todo topics

--- a/src/index.html
+++ b/src/index.html
@@ -122,7 +122,9 @@
               <div class="todo-data-value">Pending</div>
             </div>
             <div>
-              <button class="mark-as-complete">Mark as complete</button>
+              <button class="toggle-completed-status-button">
+                Mark as complete
+              </button>
             </div>
           </div>
         </article>
