Fix class typo in html

--- a/src/index.html
+++ b/src/index.html
@@ -105,8 +105,8 @@
         <section class="todos-section">
           <article class="todo-item template">
             <div class="todo-actions">
-              <img class="delete-button" src="./images/edit.svg" />
-              <img class="edit-button" src="./images/delete.svg" />
+              <img class="edit-button" src="./images/edit.svg" />
+              <img class="delete-button" src="./images/delete.svg" />
             </div>
             <div class="todo-info">
               <div class="todo-data" data-type="title">
